# mesa

./: .gitlab-ci.yml  compute-queue.txt  configure.ac  meson.build  meson_options.txt
.gitlab-ci/container/: x86_build.sh
.gitlab-ci/windows/: mesa_build.ps1  mesa_deps.ps1
include/GL/: glext.h
include/GL/internal/: dri_interface.h
include/drm-uapi/: drm.h  i915_drm.h
include/vulkan/: vk_mesa_query_timestamp.h  vulkan.h
src/: Makefile.am  meson.build
src/amd/common/: ac_nir_to_llvm.c
src/amd/compiler/: aco_instruction_selection.cpp  aco_instruction_selection_setup.cpp
src/amd/llvm/: ac_nir_to_llvm.c
src/amd/vulkan/: Makefile.am  meson.build  radv_device.c  radv_entrypoints_gen.py  radv_extensions.py  radv_image.c  radv_meta_buffer.c  radv_meta_bufimage.c  radv_meta_clear.c  radv_meta_fast_clear.c  radv_meta_fmask_expand.c  radv_meta_resolve_cs.c  radv_nir_lower_ycbcr_textures.c  radv_private.h  radv_query.c  radv_shader.c  radv_shader_info.c  radv_wsi.c  radv_wsi_display.c
src/broadcom/compiler/: nir_to_vir.c  v3d_nir_lower_image_load_store.c  v3d_nir_lower_io.c  v3d_nir_lower_scratch.c  v3d_nir_lower_txf_ms.c  vir.c
src/compiler/: Makefile.am  Makefile.sources  SConscript.glsl  blob.h  builtin_type_macros.h  glsl_types.cpp  glsl_types.h  nir_types.cpp  nir_types.h  shader_enums.c  shader_enums.h  shader_info.h
src/compiler/glsl/: ast.h  ast_to_hir.cpp  builtin_variables.cpp  gl_nir_link_uniform_initializers.c  gl_nir_lower_atomics.c  gl_nir_lower_bindless_images.c  gl_nir_lower_buffers.c  gl_nir_lower_samplers.c  gl_nir_lower_samplers_as_deref.c  glsl_parser.yy  glsl_to_nir.cpp  ir.h  ir_clone.cpp  ir_optimization.h  link_uniform_initializers.cpp  link_uniforms.cpp  linker.cpp  lower_cs_derived.cpp  lower_vector_derefs.cpp  meson.build  serialize.cpp
src/compiler/nir/: glsl_to_nir.cpp  meson.build  nir.c  nir.h  nir_algebraic.py  nir_builder.h  nir_builder_opcodes_h.py  nir_builtin_builder.c  nir_builtin_builder.h  nir_clone.c  nir_constant_expressions.h  nir_constant_expressions.py  nir_control_flow.c  nir_conversion_builder.h  nir_deref.c  nir_divergence_analysis.c  nir_format_convert.h  nir_from_ssa.c  nir_gather_info.c  nir_inline_functions.c  nir_instr_set.c  nir_intrinsics.h  nir_intrinsics.py  nir_linking_helpers.c  nir_loop_analyze.c  nir_lower_alpha_test.c  nir_lower_alu.c  nir_lower_alu_to_scalar.c  nir_lower_array_deref_of_vec.c  nir_lower_atomics.c  nir_lower_atomics_to_ssbo.c  nir_lower_bit_size.c  nir_lower_bitmap.c  nir_lower_bool_to_float.c  nir_lower_bool_to_int32.c  nir_lower_clamp_color_outputs.c  nir_lower_clip.c  nir_lower_clip_cull_distance_arrays.c  nir_lower_constant_initializers.c  nir_lower_double_ops.c  (+93 more)
src/compiler/spirv/: nir_spirv.h  spirv2nir.c  spirv_info.h  spirv_info_c.py  spirv_to_nir.c  vtn_alu.c  vtn_amd.c  vtn_cfg.c  vtn_glsl450.c  vtn_opencl.c  vtn_private.h  vtn_subgroup.c  vtn_variables.c
src/egl/main/: eglapi.c  egldisplay.h  eglimage.c  eglimage.h
src/freedreno/computerator/: a6xx.c
src/freedreno/ir3/: ir3_compiler_nir.c  ir3_context.c  ir3_context.h  ir3_nir.c  ir3_nir_analyze_ubo_ranges.c  ir3_nir_lower_io_offsets.c  ir3_nir_lower_load_barycentric_at_offset.c  ir3_nir_lower_load_barycentric_at_sample.c  ir3_nir_lower_tess.c  ir3_nir_lower_tg4_to_tex.c  ir3_nir_move_varying_inputs.c  ir3_parser.y
src/freedreno/vulkan/: tu_pipeline.c  tu_shader.c
src/gallium/: SConscript  meson.build
src/gallium/auxiliary/: Makefile.sources  meson.build
src/glsl/: Makefile.am  Makefile.sources  builtin_functions.cpp  ir.cpp  ir.h  ir_constant_expression.cpp  ir_validate.cpp  list.h  shader_enums.h
src/glsl/nir/: TODO  glsl_to_nir.cpp  nir.c  nir.h  nir_algebraic.py  nir_clone.c  nir_constant_expressions.py  nir_dominance.c  nir_from_ssa.c  nir_intrinsics.h  nir_live_variables.c  nir_lower_alu_reductions.py  nir_lower_alu_to_scalar.c  nir_lower_atomics.c  nir_lower_global_vars_to_local.c  nir_lower_io.c  nir_lower_locals_to_regs.c  nir_lower_phis_to_scalar.c  nir_lower_samplers.cpp  nir_lower_system_values.c  nir_lower_var_copies.c  nir_lower_variables.c  nir_lower_vars_to_ssa.c  nir_opcodes.h  (+17 more)
src/glx/: dri3_glx.c
src/intel/: Makefile.am  Makefile.blorp.am  Makefile.genxml.am  Makefile.isl.am  Makefile.sources  Makefile.vulkan.am
src/intel/compiler/: brw_compile_sf.c  brw_compiler.c  brw_compiler.h  brw_disasm.c  brw_eu.h  brw_eu_defines.h  brw_eu_emit.c  brw_eu_validate.c  brw_fs.cpp  brw_fs.h  brw_fs_builder.h  brw_fs_cse.cpp  brw_fs_generator.cpp  brw_fs_live_variables.cpp  brw_fs_live_variables.h  brw_fs_nir.cpp  brw_fs_reg_allocate.cpp  brw_fs_surface_builder.cpp  brw_fs_surface_builder.h  brw_fs_visitor.cpp  brw_ir_performance.cpp  brw_nir.c  brw_nir.h  brw_nir_attribute_workarounds.c  brw_nir_lower_buffer_tex_to_2d_array.c  brw_nir_lower_conversions.c  brw_nir_lower_cs_intrinsics.c  brw_nir_lower_image_load_store.c  brw_nir_lower_mem_access_bit_sizes.c  brw_nir_mark_instrs_needed_in_fs_helpers.c  brw_nir_opt_peephole_ffma.c  brw_nir_tcs_workarounds.c  brw_schedule_instructions.cpp  brw_shader.cpp  brw_shader.h  brw_sip.c  brw_vec4.cpp  brw_vec4_generator.cpp  brw_vec4_gs_visitor.cpp  brw_vec4_nir.cpp  (+62 more)
src/isl/: isl.c  isl.h  isl_gen9.c
src/loader/: loader_dri3_helper.c  loader_dri3_helper.h
src/mesa/: Makefile.am  Makefile.sources
src/microsoft/: README.md  meson.build
src/microsoft/compiler/test/: clc_nir_to_dxil_test.cpp  clc_test_dxlayer.cpp  clc_test_dxlayer.h  dxil_buffer_test.c  meson.build
src/panfrost/: Makefile.sources
src/util/: Makefile.sources  half_float.c  half_float.h  hash_table.c  hash_table.h  interval_set.c  interval_set.h  list.h  macros.h  meson.build  os_memory.h  register_allocate.c  register_allocate.h  register_allocate.py  register_allocate_priv.h  sparse_array.h  vk_alloc.h  xxd.py
src/vulkan/: Makefile.am  Makefile.sources  anv_cmd_buffer.c  anv_image.c  anv_meta.c  anv_meta_clear.c  anv_meta_resolve.c  anv_pass.c  anv_pipeline.c  anv_private.h  gen7_cmd_buffer.c  gen8_cmd_buffer.c  meson.build
subprojects/: .gitignore
subprojects/llvm/: meson.build
(+559 files in other folders)
